--- a/Simple Website - Front and Back/public/views/home.html
+++ b/Simple Website - Front and Back/public/views/home.html
@@ -10,6 +10,11 @@
     <div class="bar">
         <h1>HOME</h1>
     </div>
-    <p>Congrats, you made it</p>
+
+    <div class="main">
+        <p>Congrats, you made it</p>
+        <p>Here's a Laptop</p>
+    </div>
+    <img class="img" src="/img/1590197238340.jpg" alt="A Laptop">
 </body>
 </html>
